--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
         "build:watch": "tsc --watch",
         "test": "jest",
         "test:watch": "jest --watch",
-        "clean": "rimraf dist"
+        "clean": "rimraf dist",
+        "seed": "ts-node src/seeds/index.ts"
     },
     "dependencies": {
         "@types/bcryptjs": "^2.4.6",
@@ -19,10 +20,12 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.18.2",
+        "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.3.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
+        "validator": "^13.15.0",
         "winston": "^3.8.2"
     },
     "devDependencies": {
@@ -34,6 +37,7 @@
         "@types/supertest": "^6.0.2",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.6",
+        "@types/validator": "^13.15.0",
         "jest": "^29.7.0",
         "mongodb-memory-server": "^10.1.3",
         "nodemon": "^2.0.22",
